Fix horizontal scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body {
     background-color: var(--background-color);
     color: var(--primary-color);
     font-family: 'Cabin', sans-serif;
-    overflow-x: hidden;
 }
 
 body,
@@ -24,6 +23,8 @@ main,
 form {
     display: flex;
     flex-flow: column;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 /*
